[Style] 인증 URL및 키 값 환경변수로 변경, 주석 추가