@@ -19,6 +19,7 @@ import java.net.URL;
 import java.net.URLEncoder;
 import java.util.List;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.springframework.http.HttpMethod.GET;
 
 @Slf4j
@@ -26,25 +27,34 @@ import static org.springframework.http.HttpMethod.GET;
 @RequiredArgsConstructor
 public class CoordinateServiceImpl implements CoordinateService {
 
+    @Value("${COORDINATE_API_URL}")
+    private String coordinateApiUrl; // 주소 검색 openAPI URL
     @Value("${COORDINATE_API_KEY}")
-    private String coordinateApiKey; // API 인증키
+    private String coordinateApiKey; // 주소 검색 openAPI 인증키
 
     public final ObjectMapper objectMapper;
 
+    /**
+     * 도로명 주소또는 지번주소를 받아와 위도, 경도 반환
+     * 작성자 : 오예령
+     *
+     * @param address 도로명 주소 또는 지번주소
+     * @return 해당 위치의 위도 경도를 WGS84 좌표계 형태로 반환
+     * @throws Exception openAPI 요청 URL 암호화 및 생성,
+     */
     public Coordinate getCoordinate(String address) throws Exception {
 
         // 공공데이터 요청을 위한 URL 구성
-        String apiUrl = "https://dapi.kakao.com/v2/local/search/address.json?query="; // URL
-        String urlString = apiUrl + URLEncoder.encode(address, "UTF-8");
+        String urlString = coordinateApiUrl + URLEncoder.encode(address, UTF_8);
         URL url = new URL(urlString);
 
-        // RestTemplate을 사용하여 GET 요청 전송
+        // RestTemplate을 사용하여 요청 전송
         RestTemplate template = new RestTemplate();
         String jsonResponse;
 
-        // hedaer 인증키 담아서 전송
+        // hedaer에 인증키 담아서 전송
         HttpHeaders headers = new HttpHeaders();
-        headers.set("Authorization", "KakaoAK " + coordinateApiKey);
+        headers.set("Authorization", coordinateApiKey);
 
         HttpEntity<String> httpEntity = new HttpEntity<>(headers);
 
